--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -4,6 +4,7 @@ $primary: #001b59;
 $secondary: #d84e40;
 $accent: #67e7c2;
 $gray: #e7e7e7;
+$dark-gray: #333333;
 $white: #fffbfe;
 $black: #20201e;
 
