refact(query-explorer): dynamically calculate width and height of editor

--- a/assets/_theme.scss
+++ b/assets/_theme.scss
@@ -5,7 +5,7 @@ $secondary: #d84e40;
 $accent: #67e7c2;
 $gray: #e7e7e7;
 $dark-gray: #333333;
-$white: #fffbfe;
+$white: #fdfdfd;
 $black: #20201e;
 
 @font-face {
