feat(query-explorer): add json viewer

--- a/src/QueryExplorer/index.scss
+++ b/src/QueryExplorer/index.scss
@@ -15,7 +15,9 @@
 .query-explorer__result {
   width: 100%;
   max-width: 100%;
-  resize: none;
+  max-height: 100%;
+  overflow: scroll;
+  padding: 0.8rem;
 }
 
 .query-inputs {
