style(query-explorer): improve font size on editor

--- a/src/QueryExplorer/index.scss
+++ b/src/QueryExplorer/index.scss
@@ -48,6 +48,10 @@
 .query-explorer__editor {
   width: 100%;
   flex-grow: 1;
+
+  .CodeMirror * {
+    font-size: 1.3rem;
+  }
 }
 
 .query-inputs__selectors {
