--- a/src/QueryExplorer/side-menu/index.scss
+++ b/src/QueryExplorer/side-menu/index.scss
@@ -114,7 +114,7 @@
 }
 
 .side-menu__queries {
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 80vh;
   margin-top: 1rem;
 
@@ -146,6 +146,10 @@
   font-size: 1.2rem;
   border-radius: 4px;
   border: none;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .side-menu__query-list {
