refact(query-explorer): use links on side menu to navigate to selected query

--- a/src/QueryExplorer/side-menu/query-list.scss
+++ b/src/QueryExplorer/side-menu/query-list.scss
@@ -107,6 +107,11 @@
   font-size: 1.2rem;
   margin-bottom: 1rem;
 
+  > a {
+    text-decoration: none;
+    color: $white;
+  }
+
   &:last-child {
     margin-bottom: 0;
   }
