--- a/src/QueryExplorer/side-menu/resource-list.scss
+++ b/src/QueryExplorer/side-menu/resource-list.scss
@@ -34,13 +34,18 @@
 
 .side-menu__resources__edit {
   width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 1rem;
-  height: 1.8rem;
+  height: 2.5rem;
+
   border: none;
   border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 1rem;
+
   background-color: $secondary;
   color: $white;
+
+  text-decoration: none;
+
   cursor: pointer;
 
   &:focus {
