--- a/src/QueryExplorer/index.scss
+++ b/src/QueryExplorer/index.scss
@@ -1,14 +1,15 @@
 @import 'assets/theme';
 
 .query-explorer__controls--wrapper {
-  height: 12vh;
+  height: 13vh;
+  max-width: 100vw;
 }
 
 .query-explorer__input-output--wrapper {
   max-width: 100vw;
   max-height: 100vh;
 
-  height: 88vh;
+  height: 87vh;
   display: flex;
 }
 
