--- a/src/ResourceEditor/manage-resource/index.scss
+++ b/src/ResourceEditor/manage-resource/index.scss
@@ -6,6 +6,7 @@
   border-radius: 10px;
   box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.35);
   margin-top: 10rem;
+  max-width: 35vw;
 }
 
 .manage-resource__modal:focus {
@@ -77,6 +78,7 @@
 
 .manage-resource__modal__actions {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 
   margin-top: 0.5rem;
@@ -98,6 +100,7 @@
 }
 
 .manage-resource__modal__error {
+  width: 100%;
   color: $secondary;
   font-size: 1rem;
   text-align: center;
